<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="record_electric"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_record_electric"
        android:shortcutLongLabel="@string/shortcut_record_electric_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.energyflow"
            android:targetClass="com.example.energyflow.ui.QuickRecordActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="view_chart"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_view_chart"
        android:shortcutLongLabel="@string/shortcut_view_chart_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.energyflow"
            android:targetClass="com.example.energyflow.MainActivity" />
    </shortcut>
</shortcuts>
